# zexcavator

./: Cargo.toml  README.md  generated_from_zwl.db  rust-toolchain.toml  zec.db
.github/workflows/: build.yml  coverage.yml
cli/: Cargo.toml
cli/src/: application.rs  commands.rs  config.rs  lib.rs  main.rs
cli/src/commands/: parse.rs
docs/: zewif-extension-spec.md
lib/: Cargo.toml
lib/src/: lib.rs  ywallet.rs  zingolib.rs  zwl.rs
lib/src/ywallet/: db.rs
lib/src/zwl/: block.rs  data.rs  keys.rs  orchard_data.rs  transactions.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
zexcavator-cli/: Cargo.toml
zexcavator-cli/src/: application.rs  commands.rs  config.rs
zexcavator-cli/src/commands/: export.rs  parse.rs
zexcavator-lib/: Cargo.toml
zexcavator-lib/src/: lib.rs  parser.rs  ywallet.rs  zingolib.rs  zwl.rs
zexcavator-lib/src/ywallet/: db.rs
zexcavator-lib/src/zingolib/: zewif.rs
zexcavator-lib/src/zwl/: block.rs  keys.rs  orchard_data.rs  sapling_data.rs  transactions.rs  walletokey.rs  walletzkey.rs
zexcavator-tui/: Cargo.toml
zexcavator-tui/src/: components.rs  main.rs  views.rs  walletparsers.rs
zexcavator-tui/src/app/: model.rs
zexcavator-tui/src/components/: birthday_input.rs  input.rs  label.rs  log_viewer.rs  main_menu.rs  menu.rs  mnemonic_input.rs  result_viewer.rs  sync_bar.rs  welcome.rs
zexcavator-tui/src/constants/: colors.rs
zexcavator-tui/src/views/: export.rs  main_menu.rs  result.rs  sync.rs  zecwallet.rs
zexcavator-tui/src/views/export/: send.rs  zewif.rs  zingolib.rs
zexcavator-tui/src/views/zecwallet/: from_mnemonic.rs  from_path.rs
zexcavator-tui/src/walletparsers/: walletparsers.rs  ywallet.rs  zwl.rs
zexcavator-tui/src/walletparsers/ywallet/: db.rs
zexcavator-tui/src/walletparsers/zwl/: keys.rs  sapling_data.rs  transactions.rs  wallet_txns.rs  walletokey.rs  wallettkey.rs  walletzkey.rs
zexcavator-tui/testvectors/: mnemonic.json
