[workspace]
members = ["zexcavator-cli", "zexcavator-lib", "zexcavator-tui"]
resolver = "3"
default-members = ["zexcavator-lib", "zexcavator-tui"]

[workspace.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
abscissa_core = "0.8.2"
bc-envelope = "0.27.2"
bip0039 = "0.12.0"
bridgetree = "0.6.0"
byteorder = "1.5.0"
clap = "4"
hex = "0.4.3"
http = "1.3.1"
jubjub = "0.10.0"
once_cell = "1.2"
prost = "0.13.4"
rustls = "0.23.25"
secp256k1 = "0.27.0"
serde = "1"
thiserror = "1"
tokio = "1.44.2"
tui-realm-stdlib = "2"
tuirealm = "2"
zcash_client_backend = "0.15.0"
zcash_encoding = "0.2.2"
zcash_keys = "0.5.0"
zcash_primitives = { version = "0.20.0", features = ["transparent-inputs"] }
zexcavator-lib = { path = "zexcavator-lib" }
anyhow = "1.0.98"
incrementalmerkletree = "0.3.1"
orchard_new = "0.10.1"
orchard_old = "=0.3.0"
sapling = { version = "0.3", default-features = false }
zewif = { git = "https://github.com/BlockchainCommons/zewif.git", rev = "18592063cce454158e8110d0bd11be869fb67f60" }

[workspace.dependencies.zingolib]
git = "https://github.com/zingolabs/zingolib.git"
branch = "dev"
package = "zingolib"

[workspace.dependencies.pepper-sync]
git = "https://github.com/zingolabs/zingolib.git"
branch = "dev"
package = "pepper-sync"
