[package]
name = "zwl-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
zcash_primitives = { version = "0.20.0", features = ["transparent-inputs"] }
zcash_encoding = "0.2.2"
zcash_keys = { version = "0.5.0", features = ["transparent-inputs", "sapling", "orchard"] }
zcash_client_backend = { version = "0.15.0", features = ["transparent-inputs", "orchard"] }
orchard = "0.10.0"
sapling = { package = "sapling-crypto", version = "0.3", default-features = false }
secp256k1 = { version = "0.27.0" }
bip0039 = "0.12.0"
hex = "0.4.3"
jubjub = "0.10.0"
rusqlite = "0.32.1"
#zcash_client_backend = "0.16.0"
