[package]
name = "zexcavator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
zexcavator = { path = "../lib" }
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
bc-envelope = "0.24.0"

[dependencies.abscissa_core]
version = "0.8.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
once_cell = "1.2"
