[package]
name = "zexcavator-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zexcavator-lib = { path = "../zexcavator-lib" }
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
bc-envelope = "0.24.0"
tokio = "1.44.2"
http = "1.3.1"
zingolib = { workspace = true }
rustls = "0.23.25"
zewif-zwl = { git = "https://github.com/zingolabs/zewif-zwl", branch = "zewif-migration" }

[dependencies.abscissa_core]
version = "0.8.2"

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
once_cell = "1.2"
