[package]
name = "zexcavator-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zexcavator-lib = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }
bc-envelope = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
zingolib = { workspace = true }
rustls = { workspace = true }
zewif-zwl = { workspace = true }
abscissa_core= { workspace = true }

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell = { workspace = true }
