[package]
name = "zexcavator-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { workspace = true }
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true, features = ["transparent-inputs", "sapling", "orchard"] }
zcash_client_backend = { workspace = true, features = ["transparent-inputs", "orchard"] }
orchard = { workspace = true }
sapling = { package = "sapling-crypto", version = "0.3", default-features = false }
secp256k1 = { workspace = true }
bip0039 = { workspace = true }
hex = { workspace = true }
jubjub = { workspace = true }
rusqlite = { workspace = true }
bridgetree = { workspace = true }
prost = { workspace = true }

# zingolib = { workspace = true }
