[package]
name = "zexcavator-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tuirealm = { workspace = true }
tui-realm-stdlib = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
zingolib = { workspace = true }
pepper-sync = { workspace = true }
anyhow = { workspace = true }
http.workspace = true
zexcavator-lib = { workspace = true }
bip0039.workspace = true
