[package]
name = "zexcavator-tui"
description = "ZExCavator is a tool that recovers possibly lost ZEC."
version = "0.0.1"
edition = "2024"
repository = "https://github.com/zingolabs/zexcavator"
homepage = "https://github.com/zingolabs/zexcavator"
license = "MIT"


[[bin]]
name = "zexcavator-tui"
path = "src/main.rs"


[dependencies]
tuirealm = { workspace = true }
tui-realm-stdlib = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
zingolib = { workspace = true }
pepper-sync = { workspace = true }
anyhow.workspace = true
http.workspace = true
bip0039.workspace = true
zewif = { workspace = true }
bc-envelope = { workspace = true }
chrono = "0.4.41"
dirs = "6.0.0"
serde.workspace = true
serde_json = "1.0.140"

byteorder = { workspace = true }
zcash_primitives = { workspace = true, features = ["transparent-inputs"] }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true, features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_client_backend = { workspace = true, features = [
    "transparent-inputs",
    "orchard",
] }
sapling = { package = "sapling-crypto", version = "0.3", default-features = false }
secp256k1 = { workspace = true }
hex = { workspace = true }
jubjub = { workspace = true }
rusqlite = { workspace = true }
bridgetree = { workspace = true }
prost = { workspace = true }
incrementalmerkletree = { workspace = true }
orchard_old = { package = "orchard", version = "=0.3.0" }
orchard_new = { package = "orchard", version = "0.10.1" }
